libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/access-field-literal-string.jsonc
//@ run: fail
//@ description: Field access with string literal should error
["::kernel::special_form::access", "data", { "#literal": "field_name" }]
//~^ ERROR Use an integer literal here
